Added notifier - displays status on the screen. Add new table parameter - sum of all unicorn characteristics

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
                 <th>№</th>
                 <th>ID</th>
                 <th>Owner</th>
-                <th>Generation</th>
-                <th>Reproduction</th>
+                <th>Gen</th>
+                <th>Par</th>
+                <th>wtf</th>
                 <th>PAIR</th>
                 <th>CANDY</th>
                 <th>ETH</th>
