Added owner_id sort.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <th>Owner</th>
                 <th>Gen</th>
                 <th>Par</th>
-                <th>wtf</th>
                 <th>PAIR</th>
                 <th>CANDY</th>
                 <th>ETH</th>
@@ -46,8 +45,11 @@
             <input type="radio" name="sortRadio" id="sortRadio3" value="newest">
             <label for="sortRadio3">newest</label><br>
         </div>
-        <div name="controlBox"><label for="controlBox">limit</label>
-            <input type="text" name="limitInput" id="limitInput" maxlength="4">
+        <div name="controlBox">
+            <label for="controlBox">limit</label>
+            <input type="text" name="limitInput" id="limitInput" maxlength="4"><br>
+            <label for="controlBox">owner_id</label>
+            <input type="text" name="ownerInput" id="ownerInput" maxlength="4">
         </div>
         <div name="controlBox"><label for="controlBox">flags</label><br>
             <input type="checkbox" name="autoModeCheck" id="autoModeCheck">
